// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game /> renders properly 1`] = `
<DndProvider
  backend={[Function]}
>
  <ForwardRef(Grid)
    container={true}
    justifyContent="center"
    spacing={2}
    sx={
      Object {
        "marginTop": "1px",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
    >
      <ForwardRef(Typography)
        align="center"
        gutterBottom={true}
        variant="body2"
      >
        Your board and hand:
      </ForwardRef(Typography)>
      <ForwardRef(Grid)
        alignItems="center"
        container={true}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
        >
          <Board
            board={
              Array [
                Array [
                  null,
                ],
              ]
            }
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <Hand
            hand={Array []}
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
    >
      <ForwardRef(Grid)
        alignItems="center"
        container={true}
        direction="column"
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(Typography)
            variant="body2"
          >
            Tiles remaining in bunch: 
            0
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <PeelButton
            canPeel={false}
            handlePeel={[MockFunction handlePeel]}
            peelWinsGame={true}
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <Dump />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <OpponentBoardPreview
            players={
              Array [
                Object {
                  "board": Array [
                    Array [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": Array [],
                  "isAdmin": false,
                  "isReady": false,
                  "isTopBanana": false,
                  "userId": "id",
                  "username": "username",
                },
              ]
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</DndProvider>
`;

exports[`<Game /> renders properly with more than one player 1`] = `
<DndProvider
  backend={[Function]}
>
  <ForwardRef(Grid)
    container={true}
    justifyContent="center"
    spacing={2}
    sx={
      Object {
        "marginTop": "1px",
      }
    }
  >
    <ForwardRef(Grid)
      item={true}
    >
      <ForwardRef(Typography)
        align="center"
        gutterBottom={true}
        variant="body2"
      >
        Your board and hand:
      </ForwardRef(Typography)>
      <ForwardRef(Grid)
        alignItems="center"
        container={true}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
        >
          <Board
            board={
              Array [
                Array [
                  null,
                ],
              ]
            }
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <Hand
            hand={Array []}
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
    >
      <ForwardRef(Grid)
        alignItems="center"
        container={true}
        direction="column"
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(Typography)
            variant="body2"
          >
            Tiles remaining in bunch: 
            0
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <PeelButton
            canPeel={false}
            handlePeel={[MockFunction handlePeel]}
            peelWinsGame={true}
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <Dump />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(Typography)
            align="center"
            variant="body2"
          >
            Opponent board(s):
          </ForwardRef(Typography)>
          <OpponentBoardPreview
            players={
              Array [
                Object {
                  "board": Array [
                    Array [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": Array [],
                  "isAdmin": false,
                  "isReady": false,
                  "isTopBanana": false,
                  "userId": "id",
                  "username": "username",
                },
                Object {
                  "board": Array [
                    Array [
                      null,
                    ],
                  ],
                  "gamesWon": 0,
                  "hand": Array [],
                  "isAdmin": false,
                  "isReady": false,
                  "isTopBanana": false,
                  "userId": "other",
                  "username": "username",
                },
              ]
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</DndProvider>
`;
